Fix z-index cursor problem between global search and flash

--- a/assets/sb-admin/css/components/_flash.scss
+++ b/assets/sb-admin/css/components/_flash.scss
@@ -4,7 +4,7 @@
     right: 0;
     width: 100%;
     margin-left: 0;
-    z-index: 1000;
+    z-index: 900;
     padding-bottom: 1rem;
     transition: all 0.4s;
 
